[gd_scene load_steps=2 format=3 uid="uid://be8xlqp7rbusr"]

[ext_resource type="Script" uid="uid://btkbb2hsgavng" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2509804, 0.3019608, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -119.0
offset_right = 69.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "BEAST BATTLERS"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -28.0
offset_right = 31.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Nueva Partida"

[node name="ContinueButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Cargar Partida"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Salir"
